--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hRz-Do-Gk8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hRz-Do-Gk8">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,6 +20,7 @@
                     <connections>
                         <segue destination="Dpx-MD-Fz9" kind="relationship" relationship="viewControllers" id="fRH-TW-h6r"/>
                         <segue destination="ikH-Tp-8CK" kind="relationship" relationship="viewControllers" id="IrE-SF-094"/>
+                        <segue destination="yXn-Kl-J1m" kind="relationship" relationship="viewControllers" id="kKw-Q2-Nwo"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ko5-JP-5wt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -45,6 +46,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yai-HN-ACc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="162" y="-110"/>
+        </scene>
+        <!--ProfileStoryboard-->
+        <scene sceneID="EDm-uf-BvY">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ProfileStoryboard" id="yXn-Kl-J1m" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Zjc-YN-c1n"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6id-tu-JiE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="175" y="2"/>
         </scene>
     </scenes>
 </document>
