--- a/Profile.storyboard
+++ b/Profile.storyboard
@@ -48,6 +48,10 @@
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                         <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <action selector="ageTextFieldBeginEditing:" destination="oUA-0d-AxB" eventType="editingDidBegin" id="gxP-5j-6bg"/>
+                                                            <outlet property="delegate" destination="oUA-0d-AxB" id="76t-RL-btx"/>
+                                                        </connections>
                                                     </textField>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/ years" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQg-AU-rTR">
                                                         <rect key="frame" x="210" y="2" width="100" height="30"/>
@@ -82,6 +86,10 @@
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                         <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <action selector="genderTextFieldBeginEditing:" destination="oUA-0d-AxB" eventType="editingDidBegin" id="UlU-cS-eph"/>
+                                                            <outlet property="delegate" destination="oUA-0d-AxB" id="Xwn-VI-kDv"/>
+                                                        </connections>
                                                     </textField>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YFJ-Pq-sQO">
                                                         <rect key="frame" x="210" y="2" width="100" height="30"/>
@@ -116,6 +124,10 @@
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                         <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <action selector="weightTextFieldBeginEditing:" destination="oUA-0d-AxB" eventType="editingDidBegin" id="n7Q-Aa-D9f"/>
+                                                            <outlet property="delegate" destination="oUA-0d-AxB" id="0bV-vW-BW8"/>
+                                                        </connections>
                                                     </textField>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/ kg" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ydg-35-mpx">
                                                         <rect key="frame" x="210" y="2" width="100" height="30"/>
@@ -150,6 +162,10 @@
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                         <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <action selector="heightTextFieldBeginEditing:" destination="oUA-0d-AxB" eventType="editingDidBegin" id="wqz-T7-3Pp"/>
+                                                            <outlet property="delegate" destination="oUA-0d-AxB" id="WUb-5i-bAq"/>
+                                                        </connections>
                                                     </textField>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/ cm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m13-5U-5tz">
                                                         <rect key="frame" x="210" y="2" width="100" height="30"/>
@@ -188,6 +204,12 @@
                         <viewLayoutGuide key="safeArea" id="hA1-cs-COQ"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="person" catalog="system" id="pyZ-4u-hRZ"/>
+                    <connections>
+                        <outlet property="ageTextField" destination="sSs-OV-dtC" id="IRV-zY-MWm"/>
+                        <outlet property="genderTextField" destination="UPv-gv-OZy" id="qDF-CR-VtT"/>
+                        <outlet property="heightTextField" destination="Ywv-Mk-bQF" id="1n9-Vo-vhV"/>
+                        <outlet property="weightTextField" destination="DZf-Sb-NAL" id="4jM-Hf-5zX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ovS-wZ-efb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -199,6 +221,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="taQ-Di-ZeT" customClass="TabViewController" customModule="my_tracking_app" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DVW-5c-yHe">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
